--- a/src/meetup-signup.html
+++ b/src/meetup-signup.html
@@ -76,7 +76,7 @@
 		
 		<section dead-center>
 			<meetup-section>
-				<paper-input id="first" autofocus autocomplete="name" label="First Name" value="{{firstname}}"></paper-input>
+				<paper-input id="signupfirst" autocomplete="name" label="First Name" value="{{firstname}}"></paper-input>
 				<paper-input autocomplete="name" label="Last Name" value="{{lastname}}"></paper-input>
 				<paper-input autocomplete="email" label="Email" type="email" value="{{email}}"></paper-input>
 				<paper-input autocomplete="password" label="Password" type="password" value="{{password}}"></paper-input>
@@ -133,7 +133,7 @@
 
 		compareRoute: function(page) {
 			if (page === 'signup') {
-				this.$.first.focus();
+				this.$.signupfirst.focus();
 			}
 		}
 
