--- a/src/meetup-app.html
+++ b/src/meetup-app.html
@@ -17,7 +17,7 @@
 <link rel="import" href="../bower_components/app-route/app-route.html">
 <link rel="import" href="../bower_components/app-route/app-location.html">
 <link rel="import" href="../bower_components/neon-animation/neon-animated-pages.html">
-<link rel="import" href="../bower_components/neon-animation/animations/scale-up-animation.html">
+<link rel="import" href="../bower_components/neon-animation/animations/slide-from-bottom-animation.html">
 <link rel="import" href="../bower_components/neon-animation/animations/slide-down-animation.html">
 <link rel="import" href="../bower_components/polymerfire/polymerfire.html">
 
@@ -133,14 +133,14 @@
       <app-drawer id="drawer">
         <app-toolbar class="drawer-header"></app-toolbar>
         <paper-menu selected="[[page]]" attr-for-selected="name">
-          <paper-item name="events">
-            <a class="item" href="/events/">Events</a>
-          </paper-item>
           <paper-item name="signin" hidden$="[[signedIn]]">
             <a class="item" href="/signin/">Sign In</a>
           </paper-item>
           <paper-item name="signup" hidden$="[[signedIn]]">
             <a class="item" href="/signup/">Sign Up</a>
+          </paper-item>
+          <paper-item name="events">
+            <a class="item" href="/events/" hidden$="[[!signedIn]]">Events</a>
           </paper-item>
           <paper-item name="user" hidden$="[[!signedIn]]">
             <a class="item" href="/user/">Me</a>
@@ -159,16 +159,16 @@
               <a href="/">{{title}}</a>
             </div>
             <iron-selector selected="[[page]]" attr-for-selected="name" hidden$="{{!wideLayout}}">
-              <a class="navlink" name="events" href="/events/">Events</a>
               <a class="navlink" name="signin" href="/signin/" hidden$="[[signedIn]]">Sign In</a>
               <a class="navlink" name="signup" href="/signup/" hidden$="[[signedIn]]">Sign Up</a>
+              <a class="navlink" name="events" href="/events/" hidden$="[[!signedIn]]">Events</a>
               <a class="navlink" name="user" href="/user/" hidden$="[[!signedIn]]">Me</a>
               <a class="navlink" on-tap="logout" hidden$="[[!signedIn]]">Logout</a>
             </iron-selector>
           </app-toolbar>
         </app-header>
         
-        <neon-animated-pages selected="[[page]]" attr-for-selected="name" entry-animation="scale-up-animation" exit-animation="slide-down-animation">
+        <neon-animated-pages selected="[[page]]" attr-for-selected="name" entry-animation="slide-from-bottom-animation" exit-animation="slide-down-animation">
           <meetup-home name="home"></meetup-home>
           <meetup-events name="events"></meetup-events>
           <meetup-signin id="signinPage" name="signin" on-sign-in="signIn" page="[[page]]"></meetup-signin>
@@ -205,21 +205,12 @@
           type: String,
           reflectToAttribute: true,
           observer: '_pageChanged'
-        },
-        userFirstName: {
-          type: String,
-          value: '',
-          notify: true
-        },
-        userLastName: {
-          type: String,
-          value: '',
-          notify: true
         }
       },
 
       observers: [
-        '_routePathChanged(routeData.page)'
+        '_routePathChanged(routeData.page)',
+        '_signedInChanged(signedIn)'
       ],
 
       listners: {
@@ -227,8 +218,31 @@
       },
 
       _routePathChanged: function(page) {
+        if (!this.signedIn) {
+          if (page === 'user') {
+            this.set('routeData.page', 'home');
+          }
+          else if (page === 'events') {
+            this.set('routeData.page', 'signin');
+          }
+          else {
+            this.page = page || 'home';
+          }
+        }
+        else {
           this.page = page || 'home';
-          Polymer.AppLayout.scroll({top: 0, behavior: 'smooth'});
+        }
+        
+        Polymer.AppLayout.scroll({top: 0, behavior: 'smooth'});
+      },
+
+      _signedInChanged: function(signedIn) {
+        if (signedIn === true) {
+          this.set('routeData.page', 'events');
+        }
+        else if (signedIn === false) {
+          this.set('routeData.page', '');
+        }
       },
 
       _onLayoutChange: function(wide) {
@@ -251,20 +265,15 @@
         var self = this;
         this.$.auth.createUserWithEmailAndPassword(e.detail.email, e.detail.password)
           .then(function(data) {
-            self.set('routeData.page', 'user');
-            self.userFirstName = e.detail.firstname;
-            self.userLastName = e.detail.lastname;
-            return data;
-          })
-          .then(function(data) {
             setTimeout(function() {
               self.userInfo = {
-                firstname: self.userFirstName,
-                lastname: self.userLastName
+                firstname: e.detail.firstname,
+                lastname: e.detail.lastname
               };
-              return self.$.userStuff.setStoredValue(self.$.userStuff.path, self.userInfo).then(function(data) {
-                console.log(self.userInfo);
-              });
+              return self.$.userStuff.setStoredValue(self.$.userStuff.path, self.userInfo)
+                .then(function(data) {
+                  console.log(self.userInfo);
+                });
             }, 1000);
           });
       },
@@ -274,7 +283,6 @@
         this.$.auth.signInWithEmailAndPassword(e.detail.email, e.detail.password).then(function(data) {
           if (data) {
             self.$.signinPage.signInError = false;
-            self.set('routeData.page', 'events');
           }
           else {
             self.$.signinPage.signInError = true;
@@ -285,9 +293,7 @@
       logout: function() {
         var self = this;
         if (this.$.auth) {
-          this.$.auth.signOut().then(function(data) {
-            self.set('routeData.page', 'signin');
-          });
+          this.$.auth.signOut();
         }
       },
 
