--- a/src/meetup-events.html
+++ b/src/meetup-events.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="../bower_components/polymerfire/polymerfire.html">
 <link rel="import" href="../bower_components/neon-animation/neon-animatable-behavior.html">
 
 <dom-module id="meetup-events">
@@ -10,8 +11,31 @@
 			}
 		</style>
 
+		<firebase-document
+			id="events"
+			app-name="meetup"
+			data="{{data}}">
+		</firebase-document>
+
+		<firebase-query
+			id="eventsQuery"
+			app-name="meetup"
+			path="/events"
+			data="{{queryData}}">
+		</firebase-query>
+
 		<section>
 			<div>These are events, made by [[myName]].</div>
+			<input id="eventTitle" type="text">
+			<input id="eventDetails" type="text">
+			<button on-tap="submitInfo">Submit Info</button>
+		</section>
+
+		<section>
+			<template is="dom-repeat" items="[[queryData]]" as="event">
+				<p>[[event.title]]</p>
+				<p>[[event.details]]</p>
+			</template>
 		</section>
 
 	</template>
@@ -27,7 +51,25 @@
 			myName: {
 				type: String,
 				value: 'Nick'
+			},
+			path: {
+				type: String,
+				notify: true
+			},
+			data: {
+				type: Object
 			}
+		},
+
+		submitInfo: function() {
+			var self = this;
+
+			self.data = {
+				title: self.$.eventTitle.value,
+				details: self.$.eventDetails.value
+			};
+
+			self.$.events.save('/events');
 		}
 
 	});
