--- a/src/meetup-events.html
+++ b/src/meetup-events.html
@@ -1,6 +1,8 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/polymerfire/polymerfire.html">
 <link rel="import" href="../bower_components/neon-animation/neon-animatable-behavior.html">
+<link rel="import" href="meetup-title.html">
+<link rel="import" href="meetup-event.html">
 
 <dom-module id="meetup-events">
 	<template>
@@ -24,6 +26,8 @@
 			data="{{queryData}}">
 		</firebase-query>
 
+		<meetup-title title="Events"></meetup-title>
+
 		<section>
 			<div>These are events, made by [[myName]].</div>
 			<input id="eventTitle" type="text">
@@ -33,8 +37,11 @@
 
 		<section>
 			<template is="dom-repeat" items="[[queryData]]" as="event">
-				<p>[[event.title]]</p>
-				<p>[[event.details]]</p>
+				<meetup-event
+					event-name="[[event.title]]"
+					event-host="[[event.$key]]"
+					event-image="[[event.details]]">
+				</meetup-event>
 			</template>
 		</section>
 
