--- a/src/meetup-signup.html
+++ b/src/meetup-signup.html
@@ -52,55 +52,57 @@
 
 		<meetup-title title="Sign Up"></meetup-title>
 		
-		<section dead-center>
-			<meetup-section>
-				<paper-input
-					id="signupfocus"
-					autofocus autocomplete="given-name"
-					label="First Name" value="{{firstname}}"
-					required
-					auto-validate
-					error-message="Requires text only!"
-					pattern="[a-zA-Z]+"
-					invalid="{{signupFirst}}">
-				</paper-input>
-				<paper-input
-					autocomplete="family-name"
-					label="Last Name"
-					value="{{lastname}}"
-					required
-					auto-validate
-					error-message="Requires text only!"
-					pattern="[a-zA-Z]+"
-					invalid="{{signupLast}}">
-				</paper-input>
-				<paper-input
-					autocomplete="email"
-					label="Email"
-					type="email"
-					value="{{email}}"
-					required
-					auto-validate
-					error-message="Please enter an email address!"
-					invalid="{{signupEmail}}">
-				</paper-input>
-				<paper-input
-					autocomplete="password"
-					label="Password"
-					type="password"
-					value="{{password}}"
-					required
-					auto-validate
-					error-message="Must contain letters and numbers, and be at least 8 characters long"
-					pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$"
-					invalid="{{signupPass}}">
-				</paper-input>
-			</meetup-section>
-		</section>
+		<form>
+			<section dead-center>
+				<meetup-section>
+					<paper-input
+						id="signupfocus"
+						autofocus autocomplete="given-name"
+						label="First Name" value="{{firstname}}"
+						required
+						auto-validate
+						error-message="Requires text only!"
+						pattern="[a-zA-Z]+"
+						invalid="{{signupFirst}}">
+					</paper-input>
+					<paper-input
+						autocomplete="family-name"
+						label="Last Name"
+						value="{{lastname}}"
+						required
+						auto-validate
+						error-message="Requires text only!"
+						pattern="[a-zA-Z]+"
+						invalid="{{signupLast}}">
+					</paper-input>
+					<paper-input
+						autocomplete="email"
+						label="Email"
+						type="email"
+						value="{{email}}"
+						required
+						auto-validate
+						error-message="Please enter an email address!"
+						invalid="{{signupEmail}}">
+					</paper-input>
+					<paper-input
+						autocomplete="password"
+						label="Password"
+						type="password"
+						value="{{password}}"
+						required
+						auto-validate
+						error-message="Must contain letters and numbers, and be at least 8 characters long"
+						pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$"
+						invalid="{{signupPass}}">
+					</paper-input>
+				</meetup-section>
+			</section>
 
-		<section class="submit" dead-center>
-			<paper-button raised on-tap="signUp" disabled="[[!formValid]]">Sign Up</paper-button>
-		</section>
+			<section class="submit" dead-center>
+				<paper-button raised on-tap="signUp" type="submit" disabled="[[!formValid]]" aria-label="Sign Up">Sign Up</paper-button>
+			</section>
+		</form>
 
 	</template>
 	<script>
