--- a/src/meetup-signup.html
+++ b/src/meetup-signup.html
@@ -170,7 +170,7 @@
 
 		observers: [
 			'compareRoute(page)',
-			'validityCheck(signupFirst, signupLast, signupEmail, signupPass)'
+			'validityCheck(signupFirst, signupLast, signupEmail, signupPass, password)'
 		],
 
 		signUp: function(e, detail) {
@@ -183,8 +183,12 @@
 			}
 		},
 
-		validityCheck: function(signupFirst, signupLast, signupEmail, signupPass) {
-			if (signupFirst === false && signupLast === false && signupEmail === false && signupPass === false) {
+		validityCheck: function(signupFirst, signupLast, signupEmail, signupPass, password) {
+			if (signupFirst === false &&
+				signupLast === false &&
+				signupEmail === false &&
+				signupPass === false &&
+				password !== '') {
 				this.formValid = true;
 			}
 			else {
